--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["The Gang Technology"]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
+jupyter = "^1.0.0"
 
 
 [tool.poetry.dev-dependencies]
